--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 
     <div class="container">
       <div class="card-white" id="introduction">
-        <h1>Hello, I'm Andrea 🔥</h1>
+        <h1>Hey, i'm Andrea !</h1>
         <img src="images/profile.png" class="img-circle" width="110px" alt="NOMd">
         <p>
-          I am a student at ieseg on the Lille campus 🌧
+          I am a student at IESEG on the Lille campus ! 
         </p>
         <a href="#" class="btn-blue">Andrea's Profile</a>
       </div>
       <div class="card-white">
-        <h2>Italian food🍕</h2>
+        <h2>⛩ Japan ⛩</h2>
         <p>
-          I love eating Italian food especially <strong>mushroom pizza</strong>.
+           Since I was a child, I have been fascinated by <strong>Japan</strong> and its culture. One of my dreams is to go there and stay as long as possible! 
         </p>
       </div>
       <div class="card-white">
-        <h2>Table tennis 🏓</h2>
+        <h2>⚽️ Football ⚽️</h2>
         <p>
-          I am passionate about <strong>Table Tennis</strong>and I do competitions.
+          I have also been a football fan for a very long time. I am a fan of Olympique Lyonnais and Manchester United. My favorite player is obviously the <strong>GOAT</strong> Cristiano Ronaldo. 
         </p>
       </div>
       <div class="card-white">
-        <h2>Video games 🎮</h2>
+        <h2>💸 Sneakers 💸</h2>
         <p>
-          I often play <strong>video games</strong> with my friends !
+          I collect, since a little more than two years, more and more pair of <strong>sneakers</strong>: I have today more than fifteen of them!
         </p>
       </div>
       <div class="card-white">
